minor api change
